# Kisanenv

./: Dockerfile  README.md  dynamics.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  tasks.py  test_endpoints.py
server/: app.py
