[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kisanenv"
version = "1.0.0"
description = "A Production-Grade Agricultural Decision-Making Simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "requests>=2.32.0",
    "numpy>=1.26.4",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]

[tool.setuptools]
packages = ["server"]
py-modules = ["env", "dynamics", "grader", "inference", "run", "tasks", "test_endpoints"]

[project.scripts]
server = "server.app:main"
